--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ input[type=submit]:hover {
 
 body {
   background-image: url('./bg.jpg');
-  backdrop-filter: blur(75px);
+  background-image: blur(75px);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
